welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: type mismatch;
 found   : Unit
 required: Boolean
      if ((x==0)&&(diag=0)) {y=y+1}  else {x=x+1;
                       ^Diagonal:13: error: type mismatch;
 found   : Unit
 required: Boolean
      if ((x==0)&&(diag=1)) {y=y-1}  else {x=x-1;
                       ^